--- a/android-timeago/src/main/AndroidManifest.xml
+++ b/android-timeago/src/main/AndroidManifest.xml
@@ -1,8 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.koofr.android.timeago"
-    android:versionCode="1"
-    android:versionName="1.0.0" >
-
-    <uses-sdk android:minSdkVersion="1" />
-
-</manifest>
+    package="net.koofr.android.timeago"/>
