--- a/android-timeago/src/main/AndroidManifest.xml
+++ b/android-timeago/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.koofr.android.timeago"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"/>
